infra/k8s/traefik/middleware-forward-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth-middleware
  namespace: airport-platform
spec:
  forwardAuth:
    address: "http://identity-service.airport-platform.svc.cluster.local:8080/api/auth/validate"
    trustForwardHeader: true
    authResponseHeaders:
      - "X-User-Id"
      - "X-User-Roles"
