infra/k8s/traefik/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-middleware
  namespace: airport-platform
spec:
  stripPrefix:
    prefixes:
      - "/api"
    forceSlash: false
